--- a/src/app/widelec/dish/dish.component.css
+++ b/src/app/widelec/dish/dish.component.css
@@ -40,11 +40,15 @@ img {
 }
 
 .edit-button {
-  color: gray;
   border: 0;
   background-image: url('/assets/dish-edit.png');
   cursor: pointer;
   margin-top: 10px;
   height: 25px;
   width: 25px;
+  opacity: 0.5;
+}
+
+.edit-button:hover {
+  opacity: 1;
 }
