--- a/src/app/widelec/dishes-container/dishes-container.component.css
+++ b/src/app/widelec/dishes-container/dishes-container.component.css
@@ -18,11 +18,15 @@ app-dish:hover {
 }
 
 .add-button {
-  color: #5aa8ba;
   border: none;
   border-radius: 5px;
   background: none;
   cursor: pointer;
   height: 55px;
+  opacity: 0.5;
+}
+
+.add-button:hover {
+  opacity: 1;
 }
 
